--- a/ChangeAppLogo/Podfile
+++ b/ChangeAppLogo/Podfile
@@ -1,5 +1,4 @@
-source 'https://github.com/CocoaPods/Specs.git'
-
+# Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
 target 'ChangeAppLogo' do
